--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             y: 0,
             z: 0,
           },
+          zAcceleration = false
         }) {
           super(
             new THREE.BoxGeometry(width, height, depth),
@@ -72,30 +73,65 @@
 
           this.position.set(position.x, position.y, position.z);
 
+          this.right = this.position.x + this.width / 2;
+          this.left = this.position.x - this.width / 2;
+
           this.bottom = this.position.y - this.height / 2;
           this.top = this.position.y + this.height / 2;
+
+          this.front = this.position.z + this.depth / 2;
+          this.back = this.position.z - this.depth / 2;
 
           this.velocity = velocity;
           this.gravity = -0.005;
+
+          this.zAcceleration = zAcceleration;
         }
 
-        update(ground) {
+        updateSides() {
+          this.right = this.position.x + this.width / 2;
+          this.left = this.position.x - this.width / 2;
+
           this.bottom = this.position.y - this.height / 2;
           this.top = this.position.y + this.height / 2;
 
-          this.applyGravity(ground)
+          this.front = this.position.z + this.depth / 2;
+          this.back = this.position.z - this.depth / 2;
+        }
+
+        update(ground) {
+          this.updateSides();
+
+          if (this.zAcceleration) this.velocity.z += 0.0003
+
+          this.position.x += this.velocity.x;
+          this.position.z += this.velocity.z;
+
+          this.applyGravity(ground);
         }
         applyGravity(ground) {
           this.velocity.y += this.gravity;
 
           // this is where we hit the ground
-          if (this.bottom + this.velocity.y <= ground.top) {
+          if (
+            boxCollision({
+              box1: this,
+              box2: ground,
+            })
+          ) {
             this.velocity.y *= 0.8;
             this.velocity.y = -this.velocity.y;
-          } else {
-            this.position.y += this.velocity.y; 
-          }
+          } else this.position.y += this.velocity.y;
         }
+      }
+
+      function boxCollision({box1, box2}) {
+        // detect for collision on the x axis
+        const xCollision = box1.right >= box2.left && box1.left <= box2.right;
+        const yCollision = box1.bottom + box1.velocity.y <= box2.top && box1.top >= box2.bottom;
+        const zCollision = box1.front >= box2.back && box1.back <= box2.front;
+
+        return xCollision && yCollision && zCollision;
       }
 
       const cube = new Box({
@@ -141,10 +177,99 @@
       //  console.log(cube.position.y - cube.height / 2)
       //  console.log(ground.position.y + ground.height / 2)
 
+      const keys = {
+        a: {
+          pressed: false,
+        },
+        d: {
+          pressed: false,
+        },
+        s: {
+          pressed: false,
+        },
+        w: {
+          pressed: false,
+        },
+      };
+
+      window.addEventListener("keydown", (event) => {
+        switch (event.code) {
+          case "KeyA":
+            keys.a.pressed = true;
+            break;
+          case "KeyD":
+            keys.d.pressed = true;
+            break;
+          case "KeyS":
+            keys.s.pressed = true;
+          case "KeyW":
+            keys.w.pressed = true;
+        }
+      });
+
+      window.addEventListener("keyup", (event) => {
+        switch (event.code) {
+          case "KeyA":
+            keys.a.pressed = false;
+            break;
+          case "KeyD":
+            keys.d.pressed = false;
+            break;
+          case "KeyS":
+            keys.s.pressed = false;
+          case "KeyW":
+            keys.w.pressed = false;
+        }
+      });
+
+      const enemy = new Box({
+        width: 1,
+        height: 1,
+        depth: 1,
+        position: {
+          x: 0,
+          y: 0,
+          z: -4
+        },
+        velocity: {
+          x: 0,
+          y: 0,
+          z: 0.005,
+        },
+        color: "red",
+        zAcceleration: true
+      });
+      enemy.castShadow = true;
+      scene.add(enemy);
+
+      const enemies = [enemy]
+
       function animate() {
-        requestAnimationFrame(animate);
+        const animationId = requestAnimationFrame(animate);
         renderer.render(scene, camera);
+
+        // movement code
+        cube.velocity.x = 0;
+        cube.velocity.z = 0;
+        if (keys.a.pressed) cube.velocity.x = -0.04;
+        else if (keys.d.pressed) cube.velocity.x = 0.04;
+
+        if (keys.s.pressed) cube.velocity.z = 0.04;
+        else if (keys.w.pressed) cube.velocity.z = -0.04;
+
         cube.update(ground);
+        enemies.forEach((enemy) => {
+          enemy.update(ground)
+          if (
+            boxCollision({
+            box1: cube,
+            box2: enemy
+          })
+          ) {
+            cancelAnimationFrame(animationId)
+
+          }
+        })
         // cube.position.y += -0.01;
         //   cube.rotation.x += 0.01
         //   cube.rotation.y += 0.01
